feat(dto): Add DTOs for several entities.
The entities:
 - Game
 - Activity
 - Question
 - User