@@ -3,13 +3,24 @@ package server.database.entities.question;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import commons.entities.ActivityDto;
+import commons.entities.AnswerDto;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.modelmapper.ModelMapper;
 
 class MatchQuestionTest {
+
+    private ModelMapper mapper;
+
+    @BeforeEach
+    void setup() {
+        this.mapper = new ModelMapper();
+    }
 
     static Question q;
 
@@ -35,24 +46,36 @@ class MatchQuestionTest {
     @Test
     void checkAnswerTest() {
         // first user has all correct
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
-        Answer a = new Answer();
+        List<ActivityDto> answerAct = List.of(
+                this.mapper.map(getActivity(0), ActivityDto.class),
+                this.mapper.map(getActivity(1), ActivityDto.class),
+                this.mapper.map(getActivity(2), ActivityDto.class),
+                this.mapper.map(getActivity(3), ActivityDto.class)
+        );
+        AnswerDto a = new AnswerDto();
         a.setUserChoice(answerAct);
-        List<Answer> userAnswers = new ArrayList<>();
+        List<AnswerDto> userAnswers = new ArrayList<>();
         userAnswers.add(a);
 
         // second user has all wrong
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(3), getActivity(2), getActivity(1), getActivity(0)));
-        a = new Answer();
+        answerAct = List.of(
+                this.mapper.map(getActivity(3), ActivityDto.class),
+                this.mapper.map(getActivity(2), ActivityDto.class),
+                this.mapper.map(getActivity(1), ActivityDto.class),
+                this.mapper.map(getActivity(0), ActivityDto.class)
+        );
+        a = new AnswerDto();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has two switched (2/4 of points)
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
-        a = new Answer();
+        answerAct = List.of(
+                this.mapper.map(getActivity(0), ActivityDto.class),
+                this.mapper.map(getActivity(2), ActivityDto.class),
+                this.mapper.map(getActivity(1), ActivityDto.class),
+                this.mapper.map(getActivity(3), ActivityDto.class)
+        );
+        a = new AnswerDto();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
@@ -62,24 +85,37 @@ class MatchQuestionTest {
     @Test
     void checkAnswerMismatchingSize() {
         // first user has 4 activities
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
-        Answer a = new Answer();
+        List<ActivityDto> answerAct = List.of(
+                this.mapper.map(getActivity(0), ActivityDto.class),
+                this.mapper.map(getActivity(1), ActivityDto.class),
+                this.mapper.map(getActivity(2), ActivityDto.class),
+                this.mapper.map(getActivity(3), ActivityDto.class)
+        );
+        AnswerDto a = new AnswerDto();
         a.setUserChoice(answerAct);
-        List<Answer> userAnswers = new ArrayList<>();
+        List<AnswerDto> userAnswers = new ArrayList<>();
         userAnswers.add(a);
 
         // second user has 5 activities
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(3), getActivity(2), getActivity(1), getActivity(0), getActivity(12)));
-        a = new Answer();
+        answerAct = List.of(
+                this.mapper.map(getActivity(3), ActivityDto.class),
+                this.mapper.map(getActivity(2), ActivityDto.class),
+                this.mapper.map(getActivity(1), ActivityDto.class),
+                this.mapper.map(getActivity(0), ActivityDto.class),
+                this.mapper.map(getActivity(12), ActivityDto.class)
+        );
+        a = new AnswerDto();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has 4 activities
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
-        a = new Answer();
+        answerAct = List.of(
+                this.mapper.map(getActivity(0), ActivityDto.class),
+                this.mapper.map(getActivity(2), ActivityDto.class),
+                this.mapper.map(getActivity(1), ActivityDto.class),
+                this.mapper.map(getActivity(3), ActivityDto.class)
+        );
+        a = new AnswerDto();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
